solapa derecha un toque mas ancha para que el calendar embebido se vea sin scroll

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -874,6 +874,8 @@ body.home:not(.editing) {
     }
     /* solapa derecha */
     #theme_boost-drawers-blocks {
+        width: 100%;
+        max-width: 340px;
         .drawerheader {
             .drawertoggle {
                 background-color: $primary !important;
