border top en h3 que apareció

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -667,6 +667,7 @@ body.home:not(.editing) {
     }
     h3 {
         @include subtitle;
+        border-top: 0 !important;
     }
     p {
         @include body;
