variables, actividad en eel, h6

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1,4 +1,5 @@
-// COLORES
+/* COLORES */
+
 $primary: #152F4E;
 $secondary: #7BC5B6;
 $accent: #FFD658;
@@ -6,8 +7,11 @@ $grey1: #F0F0F0;
 $grey2: #B4C1CE;
 $grey3: #8394A6;
 $focus: 0 0 0 .2rem rgba(131, 148, 166, 0.75);
-// TAMAÑOS DE FUENTE
-$fs-sm: clamp(0.8rem, 0.17vi + 0.76rem, 0.89rem);
+
+/* TAMAÑOS DE FUENTE */
+
+$fs-xs: clamp(0.8rem, 0.17vi + 0.76rem, 0.89rem);
+$fs-sm: clamp(0.9rem, 0.25vi + 0.84rem, 1.04rem);
 $fs-base: clamp(1rem, 0.34vi + 0.91rem, 1.19rem);
 $fs-md: clamp(1.25rem, 0.61vi + 1.1rem, 1.58rem);
 $fs-lg: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
@@ -15,6 +19,19 @@ $fs-lg-xl: clamp(1.75rem, 1.28vi + 1.44rem, 2.46rem);
 $fs-xl: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
 $fs-xxl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
 $fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
+
+/* PADDINGS */
+
+$p-sm: clamp(8px, 1vi + 6px, 12px);
+$p-base: clamp(12px, 1.5vi + 8px, 20px);
+$p-md: clamp(16px, 2vi + 10px, 28px);
+$p-lg: clamp(20px, 2.5vi + 12px, 36px);
+$p-xl: clamp(24px, 3vi + 14px, 48px);
+$p-xxl: clamp(32px, 4vi + 16px, 64px);
+$p-xxxl: clamp(40px, 5vi + 18px, 80px);
+
+/* MIXINS */
+
 @mixin title {
     font-family: 'Roboto' !important;
     font-size: $fs-lg-xl !important;
@@ -668,6 +685,12 @@ body.home:not(.editing) {
     h3 {
         @include subtitle;
         border-top: 0 !important;
+    }
+    h6 {
+        font-size: $fs-sm;
+        font-family: 'Roboto';
+        font-weight: 400 !important;
+        color: $primary;
     }
     p {
         @include body;
