margin en vista simple base de datos musica

--- a/public/campus/posgrados/diplo-eel/4/styles/course.scss
+++ b/public/campus/posgrados/diplo-eel/4/styles/course.scss
@@ -119,6 +119,7 @@
     #data-singleview-content {
         background-color: general.$grey1 !important;
         padding: general.$p-xl;
+        margin-top: 2rem;
         #defaulttemplate-single {
             .btn.btn-icon {
                 background-color: general.$grey2;
