--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -683,6 +683,8 @@ body.home:not(.editing) {
     h3 {
         @include subtitle;
         border-top: 0 !important;
+        background: transparent;
+        padding-inline: initial;
     }
     h6 {
         font-size: $fs-sm;
@@ -1022,6 +1024,80 @@ body.home:not(.editing) {
                             }
                         }
                         div[role="main"] {
+                            .page-actividad {
+                                .img-portada img,
+                                img.img-portada {
+                                    margin: 4rem 0;
+                                }
+                                a {
+                                    text-decoration-style: solid;
+                                    text-decoration-color: $primary;
+                                    text-decoration-thickness: .10em;
+                                    text-underline-offset: .15em;
+                                    color: $primary;
+                                    font-family: 'Roboto';
+                                    font-weight: bold;
+                                    word-wrap: break-word;
+                                    &:hover {
+                                        color: $grey3;
+                                        text-decoration-color: $grey3;
+                                    }
+                                    &:focus {
+                                        box-shadow: none;
+                                    }
+                                }
+                                h1 {
+                                    @include title;
+                                    margin-bottom: 4rem;
+                                }
+                                h3 {
+                                    @include subtitle;
+                                    border-bottom: 0;
+                                    margin-bottom: 2rem;
+                                }
+                                ul {
+                                    @include body;
+                                    li::marker {
+                                        color: $primary;
+                                        font-size: 1.5rem;
+                                    }
+                                }
+                                .momento {
+                                    background-color: #fff;
+                                    background-repeat: no-repeat;
+                                    background-size: 50px auto;
+                                    background-position: left 2.5rem top 3.5rem;
+                                    padding: 4rem 2.5rem 4rem 8rem;
+                                    /* box-shadow: 0px 0px 10px 0px #ccc; */
+                                    text-align: left;
+                                    border: 1px solid $grey2;
+                                    margin-bottom: 4rem;
+                                    @media (max-width: 576px) {
+                                        padding: 8rem 3rem 4rem 3rem;
+                                    }
+                                    h3 {
+                                        margin-bottom: 2rem;
+                                    }
+                                }
+                                .mom-1 {
+                                    background-image: url(../../../base/img/sesion1.svg);
+                                }
+                                .mom-2 {
+                                    background-image: url(../../../base/img/sesion2.svg);
+                                }
+                                .mom-3 {
+                                    background-image: url(../../../base/img/sesion3.svg);
+                                }
+                                .mom-4 {
+                                    background-image: url(../../../base/img/sesion4.svg);
+                                }
+                                .mom-5 {
+                                    background-image: url(../../../base/img/sesion5.svg);
+                                }
+                                .mom-6 {
+                                    background-image: url(../../../base/img/sesion6.svg);
+                                }
+                            }
                             /* marquesina */
                             .contenedor-marquesina {
                                 height: 200px;
