--- a/public/campus/posgrados/ia/1/styles/course.scss
+++ b/public/campus/posgrados/ia/1/styles/course.scss
@@ -27,3 +27,10 @@
 .cmid-2975771 {
     @include general.hoja-recursos;
 }
+
+
+/* BBDD - VALS CON CHATGPT - MODULO I */
+
+.cmid-2978019 {
+    @include general.bbdd-1col;
+}
