--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -312,6 +312,152 @@ $p-xxxl: clamp(40px, 5vi + 18px, 80px);
     }
 }
 
+@mixin bbdd-1col {
+    #data-listview-content {
+        font-size: $fs-base;
+        .defaulttemplate-listentry {
+            background-color: $grey1;
+            border: none;
+            margin-bottom: 0 !important;
+            .row.my-6 {
+                margin: 0 !important;
+                flex-wrap: initial;
+                .col-auto {
+                    padding: 0;
+                }
+                .col {
+                    padding: 0;
+                    .row.h-100 {
+                        margin-left: initial;
+                        align-items: center;
+                        .col-3 {
+                            display: block;
+                            flex: initial;
+                            max-width: initial;
+                        }
+                        .col-4 {
+                            width: initial;
+                            .btn.btn-icon {
+                                background-color: $grey2;
+                            }
+                        }
+                    }
+                }
+            }
+            .defaulttemplate-list-body {
+                margin-top: initial;
+                //color: $primary;
+                .row.my-3 {
+                    display: block;
+                    border-bottom: none;
+                    margin-right: initial;
+                    margin-left: initial;
+                    .col-4.col-lg-3 {
+                        max-width: initial;
+                        padding: 0;
+                        font-weight: 600 !important;
+                    }
+                    .col-8.col-lg-9.ml-n3 {
+                        border-left: none;
+                        max-width: initial;
+                    }
+                }
+            }
+        }
+    }
+    #data-singleview-content {
+        background-color: $grey1 !important;
+        padding: $p-md;
+        margin-top: 2rem;
+        #defaulttemplate-single {
+            .btn.btn-icon {
+                background-color: $grey2;
+            }
+            a.data-field-link img {
+                max-width: 15rem;
+            }
+            .mt-4 {
+                border: none;
+            }
+        }
+    }
+}
+
+@mixin bbdd-2col {
+    #data-listview-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+        font-size: $fs-base;
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr;
+        }
+        .defaulttemplate-listentry {
+            background-color: $grey1;
+            border: none;
+            margin-bottom: 0 !important;
+            margin-top: 0 !important;
+            .row.my-6 {
+                margin: 0 !important;
+                flex-wrap: initial;
+                .col-auto {
+                    padding: 0;
+                }
+                .col {
+                    padding: 0;
+                    .row.h-100 {
+                        margin-left: initial;
+                        align-items: center;
+                        .col-3 {
+                            display: block;
+                            flex: initial;
+                            max-width: initial;
+                        }
+                        .col-4 {
+                            width: initial;
+                            .btn.btn-icon {
+                                background-color: $grey2;
+                            }
+                        }
+                    }
+                }
+            }
+            .defaulttemplate-list-body {
+                margin-top: initial;
+                //color: $primary;
+                .row.my-3 {
+                    display: block;
+                    border-bottom: none;
+                    margin-right: initial;
+                    margin-left: initial;
+                    .col-4.col-lg-3 {
+                        max-width: initial;
+                        padding: 0;
+                        font-weight: 600 !important;
+                    }
+                    .col-8.col-lg-9.ml-n3 {
+                        border-left: none;
+                        max-width: initial;
+                    }
+                }
+            }
+        }
+    }
+    #data-singleview-content {
+        background-color: $grey1 !important;
+        padding: $p-xl;
+        margin-top: 2rem;
+        #defaulttemplate-single {
+            .btn.btn-icon {
+                background-color: $grey2;
+            }
+            a.data-field-link img {
+                max-width: 15rem;
+            }
+        }
+    }
+}
+
 
 /* NAVBAR DE ADMINISTRACION DEL CURSO */
 
@@ -1351,6 +1497,13 @@ body.home:not(.editing) {
     table {
         font-family: 'Roboto';
         color: $primary;
+        thead {
+            tr {
+                th {
+                    border: 1px solid $grey2;
+                }
+            }
+        }
         tbody {
             tr {
                 th {
@@ -2057,6 +2210,10 @@ body {
     &#page-mod-data-view {
         #page-content {
             div[role="main"] {
+                h5 {
+                    font-family: 'Roboto';
+                    color: $primary;
+                }
                 /* Buscador */
                 form#options {
                     #advsearch-save-sec {
@@ -2273,7 +2430,8 @@ body {
     &#page-mod-page-mod,
     &#page-mod-url-mod,
     &#page-mod-data-mod,
-    &#page-mod-data-field- {
+    &#page-mod-data-field-,
+    &#page-mod-data-view {
         h3 {
             font-family: 'Roboto' !important;
         }
@@ -2297,6 +2455,14 @@ body {
             @include btn-secundario();
             &:hover {
                 text-decoration: none;
+            }
+        }
+        .singlebutton {
+            .btn.btn-primary {
+                @include btn-primario();
+            }
+            .btn.btn-secondary {
+                @include btn-secundario();
             }
         }
     }
@@ -2346,5 +2512,15 @@ body {
                 }
             }
         }
+    }
+}
+
+
+/* OPACITY */
+
+body {
+    #page {
+        opacity: 1;
+        transition: all 2s ease !important;
     }
 }
