--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -2521,6 +2521,7 @@ body {
 body {
     #page {
         opacity: 1;
+        display: block;
         transition: all 1s ease !important;
     }
 }
